# culinator

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  ENHANCEMENTS.md  LICENSE-MIT  Makefile  README.md  package-lock.json  settings.example.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/culinograph-export/: Cargo.toml
crates/culinograph-export/src/: content.rs  label.rs  lib.rs  test.rs
crates/culinograph-parser/: Cargo.toml
crates/culinograph-parser/src/: test.rs
crates/culinograph-validator/: Cargo.toml
culinator-application/: Cargo.toml
culinator-application/src/: lib.rs
culinator-application/src/services/: export_service.rs  formula_service.rs  import_service.rs  kitchen_service.rs  mod.rs  nutrition_service.rs  recipe_service.rs  schedule_service.rs  search_service.rs  unit_service.rs
culinator-cli/: Cargo.toml
culinator-cli/src/: catalog.rs  imports.rs  main.rs  output.rs  runtime.rs  test.rs  workflows.rs
culinator-cli/src/commands/: database.rs  export.rs  export_book.rs  import_structured.rs  mod.rs  recipe.rs  search.rs  test.rs
culinator-export/: Cargo.toml
culinator-export/src/: content.rs  csv.rs  epub.rs  html.rs  label.rs  lib.rs  manifest.rs  markdown.rs  method_html.rs  plain_text.rs  test.rs
culinator-export/src/book/: epub.rs  mod.rs  print_html.rs  site.rs  test.rs  util.rs
culinator-export/src/content/: test.rs
culinator-export/src/csv/: test.rs
culinator-export/src/epub/: test.rs
culinator-export/src/html/: test.rs
culinator-export/src/manifest/: test.rs
culinator-export/src/markdown/: test.rs
culinator-export/src/plain_text/: test.rs
culinator-import/: Cargo.toml
culinator-import/src/: lib.rs  openai.rs  settings.rs  tesseract.rs  test.rs
culinator-import/src/settings/: test.rs
culinator-import/src/structured/: json.rs  jsonld.rs  mod.rs  test.rs  yaml.rs
culinator-import/src/tesseract/: test.rs
culinator-lsp/: Cargo.toml
culinator-lsp/src/: main.rs  test.rs
culinator-models/: Cargo.toml
culinator-models/src/: image.rs  lib.rs  models.rs  nutrition.rs
culinator-models/src/nutrition/: test.rs
culinator-models/src/ports/: book_export.rs  execution.rs  export.rs  image.rs  mod.rs  nutrition.rs  parser.rs  repository.rs  resource_nutrition.rs  scheduler.rs  search.rs  secret.rs  structured_import.rs  validator.rs
culinator-nutrition-fdc/: Cargo.toml
culinator-nutrition-fdc/src/: lib.rs  seed.rs
culinator-nutrition-fdc/src/import/: mod.rs  test.rs
culinator-nutrition-fdc/src/seed/: test.rs
culinator-nutrition-fdc/src/store/: mod.rs  test.rs
culinator-parser/: Cargo.toml
culinator-parser/src/: lib.rs  semantic.rs  test.rs
culinator-parser/src/semantic/: test.rs
culinator-parser/src/syntax/: lexer.rs  mod.rs  outline.rs  test.rs  tree.rs
culinator-scheduler/: Cargo.toml
culinator-scheduler/src/: lib.rs  test.rs
culinator-secrets/: Cargo.toml
culinator-secrets/src/: encrypted_file.rs  keyring_store.rs  lib.rs  resolve.rs
culinator-secrets/src/encrypted_file/: test.rs
culinator-service/: Cargo.toml
culinator-service/src/: error.rs  lib.rs  models.rs  state.rs  test.rs  ws.rs
culinator-service/src/auth/: test.rs
culinator-service/src/error/: test.rs
culinator-service/src/models/: test.rs
culinator-service/src/routes/: books.rs  exports.rs  formulas.rs  haccp.rs  imports.rs  kitchen.rs  mod.rs  nutrition.rs  recipes.rs  test.rs
culinator-service/src/seed/: apple_pie.cg  baked_macaroni_and_cheese.cg  banana_bread.cg  banana_pancakes.cg  beef_and_broccoli.cg  beef_stew.cg  brigadeiro.cg  carbonara.cg  ceviche.cg  chicken_tikka_masala.cg  chicken_wings.cg  chocolate_chip_cookies.cg  coleslaw.cg  creamy_mashed_potatoes.cg  easy_crepes.cg  french_onion_soup.cg  french_toast.cg  fully_loaded_guacamole.cg  gluehwein.cg  granola.cg  greek_salad.cg  hummus.cg  irish_coffee.cg  lava_cake.cg  mapo_tofu.cg  mayonnaise_or_aioli.cg  meatloaf.cg  miso_soup.cg  mushroom_risotto.cg  naan_bread.cg  no_knead_bread.cg  omelet.cg  pickled_onions.cg  pizza_dough.cg  potato_leek_soup.cg  ratatouille.cg  red_lentil_dahl.cg  roasted_chicken_breast.cg  salsa.cg  shakshouka.cg  (+3 more)
culinator-service/src/state/: test.rs
culinator-service/src/ws/: test.rs
culinator-sqlite/: Cargo.toml
culinator-sqlite/src/: execution.rs  haccp.rs  images.rs  lib.rs  nutrition.rs  repository.rs  search.rs  test.rs
culinator-sqlite/src/images/: test.rs
culinator-sqlite/src/nutrition/: test.rs
culinator-sqlite/src/repository/: test.rs
culinator-sqlite/src/search/: test.rs
culinator-validator/: Cargo.toml
culinator-validator/src/: lib.rs  test.rs
culinator-wasm/: Cargo.toml
culinator-wasm/src/: lib.rs  narrative.rs  offsets.rs  outline.rs  test.rs  ui_model.rs
culinograph-application/: Cargo.toml
culinograph-application/src/: lib.rs
culinograph-application/src/services/: book_service.rs  export_service.rs  formula_service.rs  haccp_service.rs  import_service.rs  mod.rs  nutrition_service.rs  recipe_service.rs  schedule_service.rs
culinograph-cli/: Cargo.toml
culinograph-cli/src/: main.rs  test.rs
culinograph-cli/src/commands/: database.rs  export.rs  mod.rs  recipe.rs  test.rs
culinograph-import/: Cargo.toml
culinograph-import/src/: lib.rs  openai.rs  settings.rs  tesseract.rs
culinograph-import/src/openai/: test.rs
culinograph-import/src/settings/: test.rs
culinograph-import/src/tesseract/: test.rs
culinograph-lsp/: Cargo.toml
culinograph-lsp/src/: main.rs  test.rs
culinograph-models/: Cargo.toml
culinograph-models/src/: error.rs  execution.rs  haccp.rs  lib.rs  models.rs  nutrition.rs
culinograph-models/src/models/: test.rs
culinograph-nutrition-fdc/: Cargo.toml
culinograph-nutrition-fdc/src/: lib.rs  test.rs
culinograph-service/: Cargo.toml
culinograph-service/src/: auth.rs  error.rs  lib.rs  models.rs  state.rs  test.rs  ws.rs
culinograph-sqlite/: Cargo.toml
culinograph-sqlite/src/: execution.rs  haccp.rs  lib.rs  nutrition.rs  repository.rs  test.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  (+2 more)
(+355 files in other folders)
