[workspace]
resolver = "2"
members = [
  "crates/culinograph-core",
  "crates/culinograph-models",
  "crates/culinograph-application",
  "crates/culinograph-nutrition-fdc",
  "crates/culinograph-export",
  "crates/culinograph-import",
  "crates/culinograph-parser",
  "crates/culinograph-validator",
  "crates/culinograph-sqlite",
  "crates/culinograph-lsp",
  "crates/culinograph-cli",
  "crates/culinograph-service",
  "crates/culinograph-scheduler",
  "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
rusqlite = { version = "0.32", features = ["bundled", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync", "net", "time", "signal"] }
uuid = { version = "1", features = ["v4", "serde"] }
tauri = { version = "2", features = [] }
axum = { version = "0.8", features = ["ws"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

