[package]
name = "culinator-application"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
culinator-models = { path = "../culinator-models" }
culinator-core = { path = "../culinator-core" }
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
