[package]
name = "culinator-import"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
culinator-models = { path = "../culinator-models" }
culinator-parser = { path = "../culinator-parser" }
culinator-core = { path = "../culinator-core" }
culinator-secrets = { path = "../culinator-secrets" }
async-trait.workspace = true
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tempfile.workspace = true

[lints]
workspace = true
