[package]
name = "culinator-nutrition-fdc"
version.workspace = true
edition.workspace = true
license.workspace = true
autobins = false

[[bin]]
name = "culinator-fdc-build"
path = "src/bin/culinator-fdc-build.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
csv = "1.3"
culinator-models = { path = "../culinator-models" }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
rusqlite.workspace = true
serde.workspace = true
tempfile = "3"
thiserror.workspace = true
zip = { version = "4", default-features = false, features = ["deflate"] }

[lints]
workspace = true
