[package]
name = "culinator-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
culinator-core = { path = "../culinator-core" }
culinator-models = { path = "../culinator-models" }
serde.workspace = true

[dev-dependencies]
uuid.workspace = true

[lints]
workspace = true
