[package]
name = "culinator-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
culinator-models = { path = "../culinator-models" }
culinator-core = { path = "../culinator-core" }
rusqlite.workspace = true
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true
