[package]
name = "culinator-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
culinator-models = { path = "../culinator-models" }
culinator-core = { path = "../culinator-core" }
serde.workspace = true

uuid.workspace = true

[lints]
workspace = true
