[package]
name = "culinator-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
culinator-core = { path = "../culinator-core" }
culinator-narrative = { path = "../culinator-narrative" }
culinator-parser = { path = "../culinator-parser" }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "=0.2.126"
uuid.workspace = true

# `Uuid::new_v4` needs a randomness source; on wasm that is the JS crypto API.
# Feature unification means declaring it here enables it for the whole wasm build.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js"] }

[lints]
workspace = true
