[package]
name = "culinograph-application"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
culinograph-models = { path = "../culinograph-models" }
culinograph-core = { path = "../culinograph-core" }
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
