[package]
name = "culinograph-nutrition-fdc"
version.workspace = true
edition.workspace = true
license.workspace = true
autobins = false

[[bin]]
name = "culinograph-fdc-build"
path = "src/bin/culinograph-fdc-build.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
csv = "1.3"
culinograph-models = { path = "../culinograph-models" }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
rusqlite.workspace = true
serde.workspace = true
tempfile = "3"
thiserror.workspace = true
zip = { version = "4", default-features = false, features = ["deflate"] }

[lints]
workspace = true
