[package]
name = "culinograph-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
[dependencies]
culinograph-models = { path = "../culinograph-models" }
culinograph-core = { path = "../culinograph-core" }
rusqlite.workspace = true
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true
