[package]
name = "culinograph-export"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
culinograph-core = { path = "../culinograph-core" }
culinograph-models = { path = "../culinograph-models" }
serde_json.workspace = true
zip.workspace = true
uuid.workspace = true

[lints]
workspace = true
