[package]
name = "culinograph-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
culinograph-models = { path = "../culinograph-models" }
culinograph-core = { path = "../culinograph-core" }
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
