[package]
name = "culinograph-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "culinograph_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "culinograph-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
culinograph-core = { path = "../../culinograph-core" }
culinograph-parser = { path = "../../culinograph-parser" }
culinograph-validator = { path = "../../culinograph-validator" }
culinograph-sqlite = { path = "../../culinograph-sqlite" }
culinograph-service = { path = "../../culinograph-service" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
