[package]
name = "culinator-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "culinator_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "culinator-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
culinator-core = { path = "../../culinator-core" }
culinator-parser = { path = "../../culinator-parser" }
culinator-validator = { path = "../../culinator-validator" }
culinator-sqlite = { path = "../../culinator-sqlite" }
culinator-service = { path = "../../culinator-service" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-dialog.workspace = true
base64.workspace = true
thiserror.workspace = true
uuid.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
